parkings/ endpoint + swagger for it + tags in swagger
